fix alignment of shop cart

--- a/assets/css/product-page-stylesheet.css
+++ b/assets/css/product-page-stylesheet.css
@@ -124,7 +124,8 @@ a {
     display: none;
   }
   .cart.desk-cart {
-    display: block;
+    display: grid;
+    place-content: center;
   }
 }
 
